# BoWWServer

./: CMakeLists.txt  README.md  clients.yaml  connecting_clients.txt  setup_env_pi.sh  setup_resources.py  test_client_discovery.py
src/: AudioOutputRouter.cpp  AudioOutputRouter.h  BoWWServer.cpp  BoWWServer.h  BoWWServerDefs.h  ClientSession.cpp  ClientSession.h  ConfigManager.cpp  ConfigManager.h  GroupController.cpp  GroupController.h  SimpleAGC.h  VADEngine.cpp  VADEngine.h  main.cpp
